--- a/www/index.html
+++ b/www/index.html
@@ -25,36 +25,11 @@
 
     <ion-pane>
 
-      <ion-content class="background-cor">
+      <ion-nav-bar class="bar-positive">
+        <ion-nav-back-button></ion-nav-back-button>
+      </ion-nav-bar>
 
-        <img class="img-logo" alt="imagem_logo" ng-src="/img/logo_clip.png">
-
-        <div class="login-form">
-
-          <div class="list list-inset login">
-            <label class="item item-input">
-              <input type="text" placeholder="Email">
-            </label>
-            <label class="item item-input">
-              <input type="text" placeholder="Senha">
-            </label>
-          </div>
-
-          <div class="botoes">
-            <button class="button button-outline button-positive botao" id="esquerda">
-              Entrar
-            </button>
-
-            <button class="button button-outline button-positive botao" id="direita">
-              Cadastrar
-            </button>
-          </div>
-
-        </div>
-
-
-
-      </ion-content>
+      <ion-nav-view></ion-nav-view>
 
     </ion-pane>
 
